# insa-sexism

./: .flake8  .gitignore  README.md  go.mod
assets/: train.csv
cli/: Makefile  pyproject.toml
cli-data/: demographic_analysis_summary.csv  model_results_F_18-22.csv  model_results_F_23-45.csv  model_results_F_46plus.csv  model_results_M_18-22.csv  model_results_M_23-45.csv  model_results_M_46plus.csv  test.csv  train.csv  validation_results_F_18-22_1.csv  validation_results_F_18-22_2.csv  validation_results_F_46plus_6.csv  validation_results_M_18-22_3.csv  validation_results_M_23-45_4.csv  validation_results_M_23-45_5.csv  validation_results_annotator_1.csv  validation_results_annotator_2.csv
cli/cli/: main.py  model.yaml
cli/cli/api/: store.py  trainer.py
cli/cli/cmd/: train.py
cli/cli/cmd/MLP_V1/: mlp_prepare_model.py  mlp_preprocess_data.py  mlp_train_model.py  mlp_tweets_labels_wrapper.py  tune_model.py  wrapper.py
cli/cli/cmd/sepCNN/: main.py
cli/cli/cmd/utils/: training_data_format.py  validation_data_format.py
cli/cli/src/: aug.py  clean.py  loader.py  metric.py  model.py  test.py  testSVM.py  trainer.py  tuning.py  vectorizer.py
cli/cli/src/sets/: test.py  train.py
cli/cli/src/types/: test.py  train.py
cmd/: main.go
internal/trainset/: clean.go  format.go  trainset.go
