[project]
name = "cli"
version = "0.1.0"

description = "A CLI to detect sexism in text"

authors = [
    {name = "xonery",email = "kilian.houpeurt@gmail.com"}
]

readme = "../README.md"

requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]

[project.scripts]
cli = "cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
