[project]
name = "cli"
version = "0.1.0"

description = "A CLI to detect sexism in text"

authors = [
    {name = "xonery",email = "kilian.houpeurt@gmail.com"}
]

readme = "../README.md"

requires-python = "3.12.8"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "emoji (>=2.14.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "torcheval (>=0.0.7,<0.0.8)",
    "torch (>=2.5.1,<3.0.0)",
]

[project.scripts]
sxm = "cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.flake8]
max-line-length = 120